# mtk_su

./: CMakeLists.txt  README.md
include/: disasm.hpp  kallsyms.hpp  log.hpp  mtk.hpp  mtk_su.hpp  selinux.hpp  task.hpp  utils.hpp
src/: disasm.cpp  kallsyms.cpp  log.cpp  main.cpp  mtk_su.cpp  selinux.cpp  task.cpp  utils.cpp
